# website-flask

./: .replit  LICENSE  app.py  pyproject.toml  requirements.txt
templates/: home.html  jobitem.html
